RESOLVED FIXED191597
Web Inspector: REGRESSION(r238122): fetching the CertificateInfo triggers an ASSERT in workers
https://bugs.webkit.org/show_bug.cgi?id=191597
Summary Web Inspector: REGRESSION(r238122): fetching the CertificateInfo triggers an ...
Devin Rousso
Reported 2018-11-13 13:20:41 PST
> It looks like revision https://trac.webkit.org/changeset/238122/webkit > > has caused multiple crashing tests on Mac Debug WK2 > > Crashing tests: > inspector/worker/console-basic.html > inspector/worker/debugger-pause.html > inspector/worker/debugger-scripts.html > inspector/worker/runtime-basic.html > inspector/worker/worker-create-and-terminate.html > > Log for inspector/worker/console-basic.html: > https://build.webkit.org/results/Apple%20High%20Sierra%20Debug%20WK2%20(Tests)/r238129%20(5514)/inspector/worker/console-basic-crash-log.txt > > Combined History: > https://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=inspector%2Fworker%2Fconsole-basic.html%20inspector%2Fworker%2Fdebugger-pause.html%20inspector%2Fworker%2Fdebugger-scripts.html%20inspector%2Fworker%2Fruntime-basic.html%20inspector%2Fworker%2Fworker-create-and-terminate.html
Attachments
Patch (1.66 KB, patch)
2018-11-13 13:24 PST, Devin Rousso
no flags
Devin Rousso
Comment 1 2018-11-13 13:24:49 PST
Joseph Pecoraro
Comment 2 2018-11-13 13:29:19 PST
Comment on attachment 354694 [details] Patch r=me
WebKit Commit Bot
Comment 3 2018-11-13 14:06:23 PST
Comment on attachment 354694 [details] Patch Clearing flags on attachment: 354694 Committed r238144: <https://trac.webkit.org/changeset/238144>
WebKit Commit Bot
Comment 4 2018-11-13 14:06:24 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2018-11-13 14:07:28 PST
Note You need to log in before you can comment on or make changes to this bug.