Web Inspector: REGRESSION(r238122): fetching the CertificateInfo triggers an ASSERT in workers https://bugs.webkit.org/show_bug.cgi?id=191597

Reviewed by Joseph Pecoraro.

When WebInspector is open, the `CertificateInfo` for every `ResourceResponse` is now fetched,
meaning that we may try to fetch in situations previously unexpected.

* platform/network/cocoa/ResourceResponseCocoa.mm:
(WebCore::ResourceResponse::platformCertificateInfo const):


Canonical link: https://commits.webkit.org/206353@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@238144 268f45cc-cd09-0410-ab3c-d52691b4dbfc